--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Tiny neural network
+Tiny neural network.
 
 This is a small neural network development project. My first practice experience with neural networks.
 The project is implemented based on this article https://iamtrask.github.io/2015/07/12/basic-python-network/.
