--- a/tinynetwork.ipynb
+++ b/tinynetwork.ipynb
@@ -2,12 +2,149 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy"
+    "import numpy as np"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sigmoid function\n",
+    "def nonlin(x, deriv=False):\n",
+    "  if deriv == True:\n",
+    "    return x * (1-x)\n",
+    "  return 1 / (1+np.exp(-x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1]\n",
+      " [0 1 1]\n",
+      " [1 0 1]\n",
+      " [1 1 1]]\n",
+      "[[0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# input dataset\n",
+    "X = np.array([\n",
+    "  [0, 0, 1],\n",
+    "  [0, 1, 1],\n",
+    "  [1, 0, 1],\n",
+    "  [1, 1, 1],\n",
+    "])\n",
+    "print(X)\n",
+    "\n",
+    "# output dataset\n",
+    "y = np.array([[0, 0, 1, 1]]).T\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def learning(iter_cnt: int = 10_000):\n",
+    "  # seed random numbers to make calculation deterministic (it seems good practice)\n",
+    "  np.random.seed(1)\n",
+    "\n",
+    "  # initialize weights randomly with mean 0\n",
+    "  syn0 = 2 * np.random.random((3, 1)) - 1\n",
+    "\n",
+    "  # learning\n",
+    "  for _ in range(iter_cnt):\n",
+    "    # forward propagation\n",
+    "    layer0 = X\n",
+    "    layer1 = nonlin(np.dot(layer0, syn0))\n",
+    "\n",
+    "    # calc error\n",
+    "    layer1_error = y - layer1\n",
+    "\n",
+    "    # multiply how much we missed by the slope of the sigmoid at the values in layer1\n",
+    "    layer1_delta = layer1_error * nonlin(layer1, True)\n",
+    "\n",
+    "    # update weights\n",
+    "    syn0 += np.dot(layer0.T, layer1_delta)\n",
+    "\n",
+    "  print(\"Training result:\")\n",
+    "  print(layer1)\n",
+    "\n",
+    "  print(\"Values that we trying to predict:\")\n",
+    "  print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training result:\n",
+      "[[0.00966449]\n",
+      " [0.00786506]\n",
+      " [0.99358898]\n",
+      " [0.99211957]]\n",
+      "Values that we trying to predict:\n",
+      "[[0]\n",
+      " [0]\n",
+      " [1]\n",
+      " [1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "learning()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
