--- a/nnetwork/tinynetwork-part1.ipynb
+++ b/nnetwork/tinynetwork-part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def learning(iter_cnt: int = 10_000) -> None:\n",
+    "def training(iter_cnt: int = 10_000) -> None:\n",
     "  \"\"\"\n",
     "  Learns the network. Here collected all training logic. Main function.\n",
     "  Parameters:\n",
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,8 +314,8 @@
       " [0]\n",
       " [1]\n",
       " [1]]\n",
-      "CPU times: user 386 ms, sys: 7.05 ms, total: 393 ms\n",
-      "Wall time: 395 ms\n"
+      "CPU times: user 410 ms, sys: 13.1 ms, total: 423 ms\n",
+      "Wall time: 419 ms\n"
      ]
     }
    ],
@@ -323,11 +323,11 @@
     "%%time\n",
     "\n",
     "print(\"\\t\\t\\t\\t__Default settings__\")\n",
-    "learning()\n",
+    "training()\n",
     "\n",
     "for iter_cnt in range(1, 11_000, 1_000):\n",
     "  print(f\"\\t\\t\\t\\t__{iter_cnt} optimize iterations__\")\n",
-    "  learning(iter_cnt=iter_cnt)"
+    "  training(iter_cnt=iter_cnt)"
    ]
   }
  ],
